# CyberApp

./: .gitignore  CServerHelper.c  Pipfile  README.md  app.conf  httpd.conf
CServer/: CMakeLists.txt  CServer  DBNotes.txt  Database.c  Database.h  Database.h.gch  Decoder.c  Decoder.h  Decoder.h.gch  a.out  logfile  main.c  newMain.c
Group1sProject/: README.md  config.py  main.py  old-attempt-main.py  reload-apache-site-mac.sh  routes.py
Group1sProject/controllers/: FriendController.py  IndexController.py  LoginController.py
Group1sProject/lib/: Auth.py  Cookies.py  Debug.py  Middleware.py  Response.py  Route.py  User.py  View.py  config.py
Group1sProject/views/: base.html  friend-list.html  friend-request.html  index.html  login.html  signup-error-password.html  signup-success.html  user-list.html
JavaClient/: Client.java  DataProtocolDecoder.java  DataProtocolEncoder.java  Location.java  Menu.java  SignInToken.java  User.java
JavaClient/client/: DataProtocolDecoder.java  DataProtocolEncoder.java  Location.java  User.java
python/: api.py  app.py
static/: styles.css
templates/: index.html  loginerror.html  register.html  registererror.html  registersuccess.html  success.html  updateerror.html  updatepassword.html  updateusername.html  valueupdated.html
